--- a/src/components/homeGrid/homeGrid.css
+++ b/src/components/homeGrid/homeGrid.css
@@ -3,13 +3,14 @@
     color: #fff;
 }
 .banner-h1{
-    margin: 20% 0 30px 18%;
+    margin: 22% 0 30px 18%;
     font-weight: 600;
     font-size: 50px;
 }
 .banner-img{
     max-height: 450px;
     margin:10% ;
+    margin-top: 13%;
 }
 .banner-p{
     margin: 50px 0 0px 18%;
