--- a/src/pages/learn/learn.css
+++ b/src/pages/learn/learn.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     height: 100vh;
     align-items: center;
-    padding: 100px;
+    padding: 60px 100px 100px 100px;
 }
  
 .section2-h1 {
@@ -20,6 +20,7 @@
     text-align: center !important;
     font-weight: bold;
     margin-bottom: 30px;
+    margin-top: 50px;
 }
 
 .portfolio {
@@ -27,6 +28,7 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 20px;
+    padding-bottom: 80px;
 }
 
 .item {
@@ -34,11 +36,14 @@
     width: 300px;
     height: 300px;
     margin: 5px;
+    border-radius: 15px;
+    box-shadow: black 1px 1px 10px;
 }
 
 .item-img {
     width: 100%;
     height: 100%;
+    border-radius: 15px;
 }
 
 .action {
@@ -57,6 +62,7 @@
 
 .item:hover .action {
     opacity: 1;
+    border-radius: 15px;
 }
 
 .action-a {
