--- a/src/pages/practice/practice.css
+++ b/src/pages/practice/practice.css
@@ -1,10 +1,24 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+ul{
+  list-style: none;
 }
-body{
-  margin: 0;
-  padding: 0;
+.questions{
+  margin-left: 5%;
+  font-size: 1.2rem;
+}
+.ptag{
+  margin-top: 6rem !important;
+}
+
+.questions-headings{
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+  text-align: center;
+  font-size: 3rem;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+}
+.question-links{
+  font-family: 'Poppins' sans-serif;
+  color: inherit;
+  text-decoration: none;
 }
