--- a/src/pages/skills/skills.css
+++ b/src/pages/skills/skills.css
@@ -14,9 +14,10 @@
   font-family: 'Poppins', sans-serif;
 }
 .title1{
-    text-align: center !important;
-    font-weight: bold;
-    margin-bottom: 30px;
+  text-align: center !important;
+  font-weight: bold;
+  margin-bottom: 30px;
+  margin-top: 50px;
 }
 
 .section1 {
@@ -24,7 +25,7 @@
   flex-direction: column;
   height: 100vh;
   align-items: center;
-  padding: 100px;
+  padding: 70px 100px 100px 100px;
 }
 /* SERVICES PAGE */
 .services {
@@ -34,6 +35,7 @@
     gap: 40px;
     text-align: center;
     text-decoration: none;
+    padding-bottom: 100px;
   }
   .bt{
     position: absolute;
