--- a/src/components/homeGrid/homeGrid.css
+++ b/src/components/homeGrid/homeGrid.css
@@ -1,6 +1,9 @@
 .banner{
     background-color: #6900d1;
     color: #fff;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 }
 .banner-h1{
     margin: 22% 0 30px 18%;
@@ -36,7 +39,13 @@
 @media(max-width:800px){
     .banner-img{
         height: 400px;
-        width: fit-content;
+        /* width: fit-content; */
         margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .banner {
+        flex-direction: column;
     }
 }
