--- a/src/components/homeGrid/homeGrid.css
+++ b/src/components/homeGrid/homeGrid.css
@@ -1,51 +1,70 @@
-.banner{
-    background-color: #6900d1;
-    color: #fff;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+.banner {
+  background-color: #6900d1;
+  width: 100%;
+  display: flex;
+  /* margin-top: 55px; */
+  padding: 6% 0;
 }
-.banner-h1{
-    margin: 22% 0 30px 18%;
-    font-weight: 600;
-    font-size: 50px;
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 18px;
 }
-.banner-img{
-    max-height: 450px;
-    margin:10% ;
-    margin-top: 13%;
+.banner-h1 {
+  margin-left: 30%;
+  font-weight: 600;
+  font-size: 50px;
+  color: #fff;
 }
-.banner-p{
-    margin: 50px 0 0px 18%;
+.banner-img {
+  max-height: 450px;
+}
+.banner-p {
+  margin-left: 30%;
+  color: #fff;
 }
 
-.banner-a{
-    padding: 12px;
-    margin: 9% 0 0 18%;
-    width: 150px;
-    display: inline-block;
-    background: #6900d1;
-    text-decoration: none !important;
-    color: #fff;
-    border: 2px solid #fff;
-    border-radius: 5px;
-    text-align: center;
-    font-size: 14px;
+.banner-a {
+  padding: 12px;
+  margin-left: 30%;
+  width: 150px;
+  display: inline-block;
+  background: #6900d1;
+  text-decoration: none !important;
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 14px;
 }
-.banner-a:hover{
-    color: #6900d1;
-    background-color: #fff;
+.banner-a:hover {
+  color: #6900d1;
+  background-color: #fff;
 }
-@media(max-width:800px){
-    .banner-img{
-        height: 400px;
-        /* width: fit-content; */
-        margin-top: 10px;
-    }
+@media (max-width: 800px) {
+  .banner-img {
+    height: 400px;
+    /* width: fit-content; */
+    margin-top: 10px;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .banner {
-        flex-direction: column;
-    }
+  .banner {
+    flex-direction: column;
+  }
+  .content {
+    align-items: center;
+  }
+  .banner-h1 {
+    margin: 0;
+  }
+  .banner-p {
+    margin: 0;
+  }
+  .banner-a {
+    margin: 0;
+  }
 }
