--- a/src/pages/contactUs/contactUs.css
+++ b/src/pages/contactUs/contactUs.css
@@ -1,137 +1,168 @@
-.section3{
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    align-items: center;
-    padding: 100px;
+.section3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px;
 }
 
-.section3-p{
-    margin: 20px 0 10px;
-    font-size: 1.1rem;    
+.section3-p {
+  margin: 20px 0 10px;
+  font-size: 1.1rem;
 }
 
-.title4{
-    text-align: center !important;
-    font-weight: bold;
-    margin-bottom: 30px;
+.title4 {
+  text-align: center !important;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
 
-.he{
-    text-align: center;
+.he {
+  text-align: center;
 }
 
 .contact {
-    position: relative;
-    width: 100%;
-    margin-top: 5px;
-    padding-bottom: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-  
-.contact-form {
-    position: relative;
-    background: #eaeaf3;
-    width: calc(100% - 400px);
-    padding: 60px 40px 20px;
-    border-radius: 15px;
-    box-shadow: black 0px 0px 10px;
+  position: relative;
+  width: 100%;
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.contact-form:hover{
-    transform: scale(1.01);
+.contact-form {
+  position: relative;
+  background: #eaeaf3;
+  width: calc(100% - 400px);
+  padding: 60px 40px 20px;
+  border-radius: 15px;
+  box-shadow: black 0px 0px 10px;
+}
+
+.contact-form:hover {
+  transform: scale(1.01);
 }
 
 .form-row {
-    width: 100%;
-    display: flex;
+  width: 100%;
+  display: flex;
 }
-  
+
 .input50 {
-    width: 50%;
-    margin: 0 10px;
+  width: 50%;
+  margin: 0 10px;
 }
 
 .input100 {
-    width: 100%;
-    margin: 0 10px;
+  width: 100%;
+  margin: 0 10px;
+  display: flex;
 }
 
-.form-row input, .form-row textarea{
-    position: relative;
-    border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    color: #111;
-    background: transparent;
-    width: 100%;
-    padding: 10px;
-    outline: none;
-    font-size: 16px;
-    font-weight: 300;
-    margin: 10px 0;
-    resize: none;
+.form-row input,
+.form-row textarea {
+  position: relative;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  color: #111;
+  background: transparent;
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 10px 0;
+  resize: none;
 }
 
 .form-row textarea {
-    height: 150px;
+  height: 150px;
 }
 
-::placeholder{
-    color: grey;
-    font-family: 'Poppins',sans-serif;
-    font-weight: 500;
+::placeholder {
+  color: grey;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 
-.sendBtn {   
-    background-color: var(--secondary-color);
-    color: grey;
-    margin: 0;
-    border-radius: 8px;
-    padding: 8px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: 500;
-    border: 2px solid rgba(0, 0, 0, 0.2);
-    cursor: pointer;
+.sendBtn {
+  background-color: var(--secondary-color);
+  color: grey;
+  margin: 0;
+  border-radius: 8px;
+  padding: 8px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 500;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
-.sendBtn:hover{
-    color: #eaeaf3;
-    background-color: #6900d1;
+.sendBtn:hover {
+  color: #eaeaf3;
+  background-color: #6900d1;
 }
 
+.success-message {
+  color: #01bf71;
+  font-size: 1.2rem;
+}
+
+.error-message {
+  color: red;
+  font-size: 1.2rem;
+}
+
+.info-message {
+  color: yellow;
+  font-size: 1.2rem;
+}
 
 .contact-info {
-    width: 350px;    
-    background: #eaeaf3;
-    box-shadow: black 0px 0px 10px;
-    transition: all 0.3s ease-in-out;
-    border-radius: 15px;
-    padding: 60px 40px 20px;
+  width: 350px;
+  background: #eaeaf3;
+  box-shadow: black 0px 0px 10px;
+  transition: all 0.3s ease-in-out;
+  border-radius: 15px;
+  padding: 60px 40px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 33px;
 }
 
-.contact-info:hover{
-    transform: scale(1.02);
+.contact-info:hover {
+  transform: scale(1.02);
 }
 
 .info-box {
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: 40px;
+  display: flex;
+  align-items: flex-start;
 }
 
 .contact-icon {
-    width: 20px;
-    margin-right: 40px;
-    margin-top: 30px;
+  width: 20px;
+  margin-right: 20px;
+  margin-top: 30px;
 }
 
 .details h4 {
-    color: var(--secondary-color);
-    font-family: 'Poppins',sans-serif;
+  color: var(--secondary-color);
+  font-family: "Poppins", sans-serif;
 }
 
-.details p,.details a {
+.details p,
+.details a {
   color: #111;
-} 
+}
+
+@media screen and (max-width: 1000px) {
+  .contact {
+    flex-direction: column;
+  }
+  .contact-form {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .contact-info {
+    width: 100%;
+    transition: 0.5s all ease;
+  }
+}
