--- a/src/components/homeGrid/homeGrid.css
+++ b/src/components/homeGrid/homeGrid.css
@@ -2,7 +2,7 @@
   background-color: #6900d1;
   width: 100%;
   display: flex;
-  /* margin-top: 55px; */
+  margin-top: 55px;
   padding: 6% 0;
 }
 .content {
